// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 1`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 2`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 3`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled lucid-SuccessLightIcon-is-clickable"
  color="primary"
  isClickable={true}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 4`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-active"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 5`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled"
  color="primary"
  isClickable={false}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 6`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 7`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-disabled lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  color="primary"
  isClickable={true}
  isDisabled={true}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for 1.basic 8`] = `
<Icon
  aspectRatio="xMidYMid meet"
  className="lucid-SuccessLightIcon lucid-SuccessLightIcon-is-clickable lucid-SuccessLightIcon-is-active"
  color="primary"
  isClickable={true}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
>
  <circle
    className="lucid-SuccessLightIcon-background"
    cx="8"
    cy="8"
    r="7.5"
  />
  <path
    className="lucid-SuccessLightIcon-check"
    d="M4.5 8L7 10.5 11.5 6"
  />
</Icon>
`;

exports[`SuccessLightIcon [common] example testing should match snapshot(s) for Primary 1`] = `
<SuccessLightIcon
  aspectRatio="xMidYMid meet"
  color="primary"
  isClickable={false}
  isDisabled={false}
  onClick={[Function]}
  onSelect={[Function]}
  size={16}
  viewBox="0 0 16 16"
/>
`;
